<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:id="@+id/collapsinglayout"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/ShadowBG"
    android:gravity="start"
    android:padding="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_sunrise"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/WhiteText"
            android:layout_gravity="center_vertical"
            android:text="@string/sunrise"/>
        <TextView
            android:id="@+id/activityweather_TextView_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/WhiteText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_sunset"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/WhiteText"
            android:layout_gravity="center_vertical"
            android:text="@string/sunset"/>
        <TextView
            android:id="@+id/activityweather_TextView_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/WhiteText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_clouds"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/WhiteText"
            android:layout_gravity="center_vertical"
            android:text="@string/cloudiness"/>
        <TextView
            android:id="@+id/activityweather_TextView_Clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/WhiteText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_humidity"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/WhiteText"
            android:layout_gravity="center_vertical"
            android:text="@string/humidity"/>
        <TextView
            android:id="@+id/activityweather_TextView_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:textColor="@color/WhiteText"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_pressure"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/WhiteText"
            android:layout_gravity="center_vertical"
            android:text="@string/pressure"/>
        <TextView
            android:id="@+id/activityweather_TextView_Pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/WhiteText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_wind"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/WhiteText"
            android:layout_gravity="center_vertical"
            android:text="@string/speed"/>
        <TextView
            android:id="@+id/activityweather_TextView_windspeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/WhiteText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_direction"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/WhiteText"
            android:layout_gravity="center_vertical"
            android:text="@string/direction"/>
        <TextView
            android:id="@+id/activityweather_TextView_winddirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/WhiteText"
            />
    </LinearLayout>
</LinearLayout>
